--- a/DARK-MENU/menu.html
+++ b/DARK-MENU/menu.html
@@ -27,8 +27,11 @@
             </nav>
             <div class="menu-login">
                 <button class="menu"><img src="../IMG/menu.png" alt="Menu"></button>
-                <div>
-                    
+                <div class="menu-items">
+                    <ul>
+                        <li><a href="Configurações">Configurações</a></li>
+                        <li><a href="Reset">Reset</a></li>
+                    </ul>
                 </div>
             </div>
         </header>
