--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h1 class="titulo">B i o l o g i a  & <br> Z o o l o g i a  T e r r e s t r e</h1>
                 </div>
                 <div class="botoes">
-                    <a href="" class="botao">Começar</a>
+                    <a href="./CONTEÚDOS/conteudo.html" class="botao">Começar</a>
                 </div>
                 <div class="animais-sombra">
                     <img class="animais" src="IMG/animais.png" alt="">
