--- a/CONTEÚDOS/conteudo.html
+++ b/CONTEÚDOS/conteudo.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
+    <script src="./conteudo.js" defer></script>
     <title>Biotvida - Biologia & Zoologia terrestre</title>
 </head>
 <body>
@@ -44,123 +45,9 @@
                     <img class="img-1" src="../IMG/Natureza 1.png" alt="">
                     <img class="img-2" src="../IMG/Natureza 2.png" alt="">
                 </div>
-                <button class="botao">Avançar</button>
-            </section>      
-
-            <section>
-                <header>
-                    <div class="logo-inicio-2">
-                        <img class="logo-2" src="../IMG/logo.png" alt="">
-                    </div>
-                </header>
-                <section class="">
-                    <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo2">
-                    </div>
-                </section>
-                <h1 class="segundo">Elementos da Natureza:</h1>
-
-                <p class="segundo-p">Flora e Fauna: As plantas e os animais constituem a biota da Terra. A flora abrange todas as espécies de plantas, desde as árvores majestosas das florestas tropicais até os minúsculos musgos das tundras árticas. A fauna inclui todos os animais, desde os grandes mamíferos até os insetos e microorganismos.</p>
-                <br>
-                <p class="terceiro-p">Ecossistemas: Os ecossistemas são comunidades de organismos interagindo entre si e com o ambiente físico. Exemplos incluem florestas, oceanos, desertos e pântanos. Cada ecossistema tem uma dinâmica própria, com cadeias alimentares e ciclos de nutrientes.</p>
-                <br>
-                <p class="quarto-p">Elementos Abióticos: Estes são os componentes não vivos do ambiente natural, como o solo, a água, o ar e os minerais. Eles são essenciais para a sobrevivência dos organismos vivos e influenciam diretamente a composição e a estrutura dos ecossistemas.</p>
-
-                <p class="quinto-p">Os elementos que habitam na natureza referem-se à diversidade de seres vivos e não vivos que compõem o ambiente natural. Esses elementos podem ser classificados em diferentes categorias, incluindo seres vivos (bióticos) e componentes não vivos (abióticos).</p>
+                <button class="botao" onclick="navegarPara('conteudo2.html')">Avançar</button>
                 
-                <img class="seta" src="../IMG/seta.png" alt="">
-                <img class="img-3" src="../IMG/Natureza 3 (1).png" alt="">
-                <img class="circulo" src="../IMG/circulo.png" alt="">
-
-                <button class="botao-2">Avançar</button>
-                <button class="botao-3">Retornar</button> 
-
-            </section>
-
-            <section>
-                <header>
-                    <div class="logo-inicio-2">
-                        <img class="logo-2" src="../IMG/logo.png" alt="">
-                    </div>
-                </header>
-                <div class="imagens">
-                    <img src="../IMG/Fundo.png" alt="" class="fundo">
-                    <img src="../IMG/Fundo2.png" alt="" class="fundo2">
-                </div>
-                <h1 class="terceiro">Importância da Natureza</h1>
-
-                <img class="img-4" src="../IMG/Natureza 4.png" alt="">
-                <p class="sexto-p">A natureza desempenha um papel crucial na sustentação da vida na Terra. Ela fornece os recursos necessários para a sobrevivência dos seres vivos, como água, ar, alimentos e materiais para abrigo. Além disso, a natureza mantém um equilíbrio ecológico que é vital para a saúde do planeta. Os ciclos naturais, como o ciclo da água e o ciclo do carbono, regulam o clima 
-                    e a qualidade do ar e da água.</p>
-
-                    <h2 class="terceiro-2">T <br> Ó <br> P <br> I <br> C <br> O <br> S</h2>
-
-                <ul class="lista">
-                    <li>Suporte à Vida</li>
-                    <li>Recursos Naturais</li>
-                    <li>Regulação Climática</li>
-                    <li>Saúde e Bem-Estar Humano</li>
-                    <li>Conexão Humana com a Natureza</li>
-                    <li>Valor Econômico</li>
-                    <li>Educação e Pesquisa</li>
-                    <li>Cultura e Espiritualidade</li>
-                    <li>Preservação do Futuro</li>
-                </ul>
-
-                <button class="botao-4">Avançar</button>
-                <button class="botao-5">Retornar</button>
-            </section>
-
-            <section>
-                <header>
-                    <div class="logo-inicio-2">
-                        <img class="logo-2" src="../IMG/logo.png" alt="">
-                    </div>
-                </header>
-                <div class="imagens">
-                    <img src="../IMG/Fundo.png" alt="" class="fundo">
-                    <img src="../IMG/Fundo2.png" alt="" class="fundo2">
-                </div>
-
-                <h1 class="quarto">Conservação e Sustentabilidade</h1>
-
-                <p class="setimo-p">A conservação e a sustentabilidade da natureza são fundamentais para garantir a saúde e o bem-estar do planeta e de todas as suas formas de vida. Estas práticas visam proteger os ecossistemas, preservar a biodiversidade e utilizar os recursos naturais de maneira que eles possam ser mantidos para as futuras gerações.</p>
-                <p class="oitavo-p">Reconhecendo a importância vital da natureza, movimentos de conservação e sustentabilidade ganharam destaque nas últimas décadas. A conservação busca proteger e preservar os recursos naturais e os ecossistemas, enquanto a sustentabilidade visa garantir que as necessidades das gerações presentes sejam atendidas sem comprometer a capacidade das gerações futuras de atender às suas próprias necessidades.</p>
-
-                <img class="img-5" src="../IMG/Natureza 5.png" alt="">
-                <img class="seta-2" src="../IMG/seta.png" alt="">
-                <img class="img-6" src="../IMG/Natureza 6.png" alt="">
-                <img class="seta-3" src="../IMG/seta.png" alt="">
-
-                <button class="botao-6">Avançar</button>
-                <button class="botao-7">Retornar</button>
-            </section>
-
-            <section>
-                <header>
-                    <div class="logo-inicio-2">
-                        <img class="logo-2" src="../IMG/logo.png" alt="">
-                    </div>
-                </header>
-                <div class="imagens">
-                    <img src="../IMG/Fundo.png" alt="" class="fundo">
-                    <img src="../IMG/Fundo2.png" alt="" class="fundo2">
-                </div>
-
-                <h1 class="quinto">Resumindo...</h1>
-
-                <p class="nono-p">A natureza é a totalidade dos ecossistemas e elementos vivos e não vivos que compõem o ambiente natural do planeta Terra. Ela inclui uma vasta diversidade de organismos, desde microrganismos até grandes mamíferos, bem como elementos físicos como solo, água, ar e clima. A natureza desempenha um papel fundamental na sustentação da vida, proporcionando recursos essenciais, regulando processos ambientais, e influenciando a saúde e o bem-estar dos seres humanos e de todas as outras formas de vida.</p>
-
-                <p class="decimo-p">A natureza é a base da vida na Terra, fornecendo recursos essenciais, regulando processos climáticos e sustentando a biodiversidade. A preservação e conservação da natureza são cruciais para garantir um futuro saudável e sustentável para todas as formas de vida. É imperativo reconhecer a importância da natureza e implementar práticas e políticas que promovam a conservação e a sustentabilidade para garantir que os recursos naturais permaneçam disponíveis e que os ecossistemas continuem a prosperar.</p>
-
-                <img class="img-7" src="../IMG/Natureza 8 1.png" alt="">
-                <img class="img-8" src="../IMG/Natureza 7 1.png" alt="">
-
-
-                <button class="botao-8">Avançar</button>
-                <button class="botao-9">Retornar</button>
-            </section>
+            </section>      
         </main>
     </div>
 </body>
