--- a/CONTEÚDOS/botanica4,5.html
+++ b/CONTEÚDOS/botanica4,5.html
@@ -22,8 +22,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                        <img src="../IMG/Fundo.png" alt="" class="fundo15">
+                        <img src="../IMG/Fundo2.png" alt="" class="fundo16">
                     </div>
                 </section>
                 <h1 class="oitavo">Desafios e Oportunidades</h1>
