--- a/CONTEÚDOS/botanica5.html
+++ b/CONTEÚDOS/botanica5.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                        <img src="../IMG/Fundo.png" alt="" class="fundo17">
+                        <img src="../IMG/Fundo2.png" alt="" class="fundo18">
                     </div>
                 </section>
                 <h1 class="nono">Resumindo...</h1>
@@ -33,7 +33,7 @@
                 <img class="seta-4" src="../IMG/seta.png" alt="">
                 <img class="img-16" src="../IMG/Botânica 10 1.png" alt="">
 
-                <button class="botao-16" onclick="navegarPara('conteudo.html')">Avançar</button>
+                <button class="botao-16" onclick="navegarPara('../QUIZ/quiz.html')">Avançar</button>
                 <button class="botao-17" onclick="navegarPara('botanica4.html')">Retornar</button>
             </section>
         </main>
