--- a/CONTEÚDOS/conteudo4.html
+++ b/CONTEÚDOS/conteudo4.html
@@ -21,8 +21,8 @@
                     </div>
                 </header>
                 <div class="imagens">
-                    <img src="../IMG/Fundo.png" alt="" class="fundo">
-                    <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                    <img src="../IMG/Fundo.png" alt="" class="fundo7">
+                    <img src="../IMG/Fundo2.png" alt="" class="fundo8">
                 </div>
 
                 <h1 class="quarto">Conservação e Sustentabilidade</h1>
