--- a/CONTEÚDOS/zoologia3.html
+++ b/CONTEÚDOS/zoologia3.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                        <img src="../IMG/Fundo.png" alt="" class="fundo9">
+                        <img src="../IMG/Fundo2.png" alt="" class="fundo10">
                     </div>
                 </section>
                 <h1 class="quinto">Importância da Zoologia</h1>
