--- a/QUIZ/tela1.html
+++ b/QUIZ/tela1.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
+    <script src="./tela1.js" defer></script>
     <title>Biotvida - Biologia & Zoologia terrestre</title>
 </head>
 <body>
@@ -37,17 +38,16 @@
                 <img src="../IMG/Fundo2.png" alt="" class="fundo2">
                 <img src="../IMG/fundoquiz.png" class="fundo3" alt="">
             </div>
+
             <h1 class="titulo">Quiz</h1>
-            <h2 class="titulo-2">Por que a natureza é essencial para a vida na Terra?</h2>
+            <h2 id="pergunta" class="titulo-2">Por que a natureza é essencial para a vida na Terra?</h2>
 
-            <button class="botao-1">A) Porque fornece apenas um local bonito para recreação.</button>
-            <button class="botao-2">B) Porque é fundamental para a produção de alimentos, fornecimento de oxigênio, regulação</button>
-            <button class="botao-3">C) Porque é uma fonte ilimitada de recursos que nunca se esgotam.</button>
-            <button class="botao-4">D) Porque não tem impacto significativo na vida humana.</button>
+            <button id="resposta1" class="botao-1">A) Porque fornece apenas um local bonito para recreação.</button>
+            <button id="resposta2" class="botao-2">B) Porque é fundamental para a produção de alimentos, fornecimento de oxigênio, regulação</button>
+            <button id="resposta3" class="botao-3">C) Porque é uma fonte ilimitada de recursos que nunca se esgotam.</button>
+            <button id="resposta4" class="botao-4">D) Porque não tem impacto significativo na vida humana.</button>
 
-            <img class="img-1" src="../IMG/quiz.png" alt="">
-            <script src="./tela1.js"></script>
+            <img  class="img-1" src="../IMG/quiz.png" alt="">
         </section>
-        <a href="./tela2.html">t2</a>
     </div>
 </body>
