--- a/CONTEÚDOS/conteudo2.html
+++ b/CONTEÚDOS/conteudo2.html
@@ -22,10 +22,11 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                        <img src="../IMG/Fundo.png" alt="" class="fundo3">
+                        <img src="../IMG/Fundo2.png" alt="" class="fundo4">
                     </div>
                 </section>
+            <section>
                 <h1 class="segundo">Elementos da Natureza:</h1>
 
                 <p class="segundo-p">Flora e Fauna: As plantas e os animais constituem a biota da Terra. A flora abrange todas as espécies de plantas, desde as árvores majestosas das florestas tropicais até os minúsculos musgos das tundras árticas. A fauna inclui todos os animais, desde os grandes mamíferos até os insetos e microorganismos.</p>
@@ -38,7 +39,7 @@
                 
                 <img class="seta" src="../IMG/seta.png" alt="">
                 <img class="img-3" src="../IMG/Natureza 3 (1).png" alt="">
-                <img class="circulo" src="../IMG/circulo.png" alt="">
+                
 
                 <button class="botao-2" onclick="navegarPara('conteudo3.html')">Avançar</button>
                 <button class="botao-3" onclick="navegarPara('conteudo.html')">Retornar</button> 
