--- a/CONTEÚDOS/zoologia2,5.html
+++ b/CONTEÚDOS/zoologia2,5.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                        <img src="../IMG/Fundo.png" alt="" class="fundo5">
+                        <img src="../IMG/Fundo2.png" alt="" class="fundo6">
                     </div>
                 </section>
                 <h1 class="terceiro">Principais Áreas na Zoologia</h1>
