--- a/CONTEÚDOS/zoologia2,9.html
+++ b/CONTEÚDOS/zoologia2,9.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                        <img src="../IMG/Fundo.png" alt="" class="fundo7">
+                        <img src="../IMG/Fundo2.png" alt="" class="fundo8">
                     </div>
                 </section>
                 <h1 class="quarto">Principais Áreas na Zoologia</h1>
