--- a/CONTEÚDOS/zoologia4,5.html
+++ b/CONTEÚDOS/zoologia4,5.html
@@ -20,8 +20,8 @@
             </header>
             <section class="">
                 <div class="imagens">
-                    <img src="../IMG/Fundo.png" alt="" class="fundo">
-                    <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                    <img src="../IMG/Fundo.png" alt="" class="fundo13">
+                    <img src="../IMG/Fundo2.png" alt="" class="fundo14">
                 </div>
             </section>
             <h1 class="setimo">Desafios e Oportunidades</h1>
