--- a/CONTEÚDOS/zoologia4.html
+++ b/CONTEÚDOS/zoologia4.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                        <img src="../IMG/Fundo.png" alt="" class="fundo11">
+                        <img src="../IMG/Fundo2.png" alt="" class="fundo12">
                     </div>
                 </section>
                 <h1 class="sexto">Desafios e Oportunidades</h1>
