--- a/DARK-MENU/menu.html
+++ b/DARK-MENU/menu.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
+    <script src="./menu.js" defer></script>
     <title>Biotvida - Biologia & Zoologia terrestre</title>
 </head>
 <body>
@@ -28,27 +29,25 @@
             <div class="menu-login">
                 <button class="menu"><img src="../IMG/menu.png" alt="Menu"></button>
                 <div class="menu-items">
-                    <ul>
-                        <li><a href="Configurações">Configurações</a></li>
-                        <li><a href="Reset">Reset</a></li>
-                    </ul>
+                    <button id="Ver-botoes" class="confi">Configurações</button>
+                    <button id="escuro" class="aceso/apagado">Light/Dark - Mode</button>
+                    <button id="reset" class="reset">Reset</button>
                 </div>
-            </div>
         </header>
-
+        
         <main>
             <section class="site">
                 <div class="imagens">
-                    <img src="../IMG/fundo.png" alt="" class="fundo">
-                    <img src="../IMG/fundo2.png" alt="" class="fundo2">
+                    <img id="img-clara" src="../IMG/fundo.png" alt="" class="fundo">
+                    <img id="img-clara2" src="../IMG/fundo2.png" alt="" class="fundo2">
                     <h1 class="titulo">B i o l o g i a  & <br> Z o o l o g i a  T e r r e s t r e</h1>
                     <div class="botoes">
                         <a href="" class="botao">Começar</a>
                     </div>
                 </div>
                 <div class="animais-sombra">
-                    <img class="animais" src="../IMG/animais.png" alt="">
-                    <img class="animais2" src="../IMG/animais2.png" alt="">
+                    <img id="img-ani" class="animais" src="../IMG/animais.png"  alt="">
+                    <img id="img-ani2" class="animais2" src="../IMG/animais2.png"  alt="">
                     <img class="sombra" src="../IMG/sombra.png" alt="">
                 </div>
                 <a href="../index.html">i</a>
