--- a/DARK-MENU/menu.html
+++ b/DARK-MENU/menu.html
@@ -26,12 +26,8 @@
                     <li><a href="Sobre-Nós">Sobre nós</a></li>
                 </ul>
             </nav>
-            <div class="menu-login">
-                <button class="menu"><img src="../IMG/menu.png" alt="Menu"></button>
                 <div class="menu-items">
-                    <button id="Ver-botoes" class="confi">Configurações</button>
-                    <button id="escuro" class="aceso/apagado">Light/Dark - Mode</button>
-                    <button id="reset" class="reset">Reset</button>
+                    <button id="escuro" class="aceso-apagado">Light/Dark - Mode</button>
                 </div>
         </header>
         
