--- a/index.html
+++ b/index.html
@@ -26,13 +26,9 @@
                     <li><a href="./CONTEÚDOS/sobrenos.html">Sobre nós</a></li>
                 </ul>
             </nav>
-            <div class="menu-login">
-                <button id="hamburger" class="menu"><img src="IMG/menu.png" alt="Menu"></button>
-                <div class="menu-items">
-                    <button id="Ver-botoes" class="confi">Configurações</button>
-                    <button id="escuro" class="aceso/apagado">Light/Dark - Mode</button>
+                <div class="menu-items" id="menu-items">
+                    <button id="escuro" class="aceso-apagado">Light/Dark - Mode</button>
                 </div>
-            </div>
         </header>
 
         <main>
