--- a/CONTEÚDOS/botanica3.html
+++ b/CONTEÚDOS/botanica3.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo5">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo6">
+                        <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo5">
+                        <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo6">
                     </div>
                 </section>
                 <h1 class="terceiro">Importância da Botânica</h1>
