--- a/CONTEÚDOS/botanica4.html
+++ b/CONTEÚDOS/botanica4.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo13">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo14">
+                        <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo13">
+                        <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo14">
                     </div>
                 </section>
                 <h1 class="setimo">Desafios e Oportunidades</h1>
