--- a/CONTEÚDOS/botanica5.html
+++ b/CONTEÚDOS/botanica5.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo17">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo18">
+                        <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo17">
+                        <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo18">
                     </div>
                 </section>
                 <h1 class="nono">Resumindo...</h1>
