--- a/CONTEÚDOS/conteudo.html
+++ b/CONTEÚDOS/conteudo.html
@@ -26,16 +26,16 @@
                     <li><a href="./sobrenos.html">Sobre nós</a></li>
                 </ul>
             </nav>
-            <div class="menu-login">
-                <button class="menu"><img src="../IMG/menu.png" alt="Menu"></button>
+            <div class="menu-items" id="menu-items">
+                <button id="escuro" class="aceso-apagado">Light/Dark</button>
             </div>
         </header>
         
         <main>
             <section class="Natureza">
                 <div class="imagens">
-                    <img src="../IMG/Fundo.png" alt="" class="fundo">
-                    <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                    <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo">
+                    <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo2">
             </section>       
             <br>
             <section>
