--- a/CONTEÚDOS/conteudo2.html
+++ b/CONTEÚDOS/conteudo2.html
@@ -22,8 +22,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo3">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo4">
+                        <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo3">
+                        <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo4">
                     </div>
                 </section>
             <section>
