--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
                 <div class="menu-items" id="menu-items">
-                    <button id="escuro" class="aceso-apagado">Light/Dark - Mode</button>
+                    <button id="escuro" class="aceso-apagado">Light/Dark</button>
                 </div>
         </header>
 
