--- a/CONTEÚDOS/botanica3,5.html
+++ b/CONTEÚDOS/botanica3,5.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo7">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo8">
+                        <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo7">
+                        <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo8">
                     </div>
                 </section>
                 <h1 class="quarto">Importância da Botânica</h1>
