--- a/CONTEÚDOS/conteudo5.html
+++ b/CONTEÚDOS/conteudo5.html
@@ -21,8 +21,8 @@
                     </div>
                 </header>
                 <div class="imagens">
-                    <img src="../IMG/Fundo.png" alt="" class="fundo9">
-                    <img src="../IMG/Fundo2.png" alt="" class="fundo10">
+                    <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo9">
+                    <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo10">
                 </div>
 
                 <h1 class="quinto">Resumindo...</h1>
