--- a/CONTEÚDOS/sobrenos.html
+++ b/CONTEÚDOS/sobrenos.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
+    <script src="./sobrenos.js" defer></script>
     <title>Biotvida - Biologia & Zoologia terrestre</title>
 </head>
 <body>
@@ -25,16 +26,16 @@
                     <li class="sobrenos"><a href="./sobrenos.html">Sobre nós</a></li>
                 </ul>
             </nav>
-            <div class="menu-login">
-                <button class="menu"><img src="../IMG/menu.png" alt="Menu"></button>
+            <div class="menu-items" id="menu-items">
+                <button id="escuro" class="aceso-apagado">Light/Dark</button>
             </div>
         </header>
         
         <main>
             <section class="Natureza">
                 <div class="imagens">
-                    <img src="../IMG/Fundo.png" alt="" class="fundo">
-                    <img src="../IMG/Fundo2.png" alt="" class="fundo2">
+                    <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo">
+                    <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo2">
                     <br>
             </section>
 
