--- a/CONTEÚDOS/zoologia5.html
+++ b/CONTEÚDOS/zoologia5.html
@@ -21,8 +21,8 @@
                 </header>
                 <section class="">
                     <div class="imagens">
-                        <img src="../IMG/Fundo.png" alt="" class="fundo15">
-                        <img src="../IMG/Fundo2.png" alt="" class="fundo16">
+                        <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo15">
+                        <img id="img-clara2" src="../IMG/Fundo2.png" alt="" class="fundo16">
                     </div>
                 </section>
                 <h1 class="oitavo">Resumindo...</h1>
