--- a/CONTEÚDOS/sobrenos.html
+++ b/CONTEÚDOS/sobrenos.html
@@ -41,20 +41,20 @@
 
             <section>
                 <div class="nomes">
-                    <p>Maria Ferreira</p>
-                    <p>Maria Faria</p>
-                    <p>Ana Julia</p>
-                    <p>Julia Maciel</p>
-                    <p>Marcela Caramico</p>
+                    <p>Maria Ferreira <br> @mah.ferreira_19 </p>
+                    <p>Maria Faria <br> @xmah_13</p>
+                    <p>Ana Julia <br> @anajulia.o12</p>
+                    <p>Julia Maciel <br> @juliaz.x</p>
+                    <p>Marcella Caramico <br> @_caramico.mah_</p>
                 </div>
 
                 <div class="links">
                     <ul>
-                        <li class="um"><img src="" alt=""></li>
-                        <li class="dois"><img src="" alt=""></li>
-                        <li class="tres"><img src="" alt=""></li>
-                        <li class="quatro"><img src="" alt=""></li>
-                        <li class="quinto"><img src="" alt=""></li>
+                        <li class="um"><img src="../IMG/Mafe.png" alt=""></li>
+                        <li class="dois"><img src="../IMG/Mah.png" alt=""></li>
+                        <li class="tres"><img src="../IMG/AnaJu.png" alt=""></li>
+                        <li class="quatro"><img src="../IMG/Ju.png" alt=""></li>
+                        <li class="quinto"><img src="../IMG/Marce.png" alt=""></li>
                     </ul>
                 </div>
             </section>
