--- a/QUIZ/hanking.html
+++ b/QUIZ/hanking.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
-    <script src="./telafi.js" defer></script>
+    <script src="./hanking.js" defer></script>
     <title>Biotvida - Biologia & Zoologia terrestre</title>
 </head>
 <body>
@@ -31,6 +31,7 @@
             </div>
         </header>
 
+
         <section>
             <div class="imagens">
                 <img id="img-clara" src="../IMG/Fundo.png" alt="" class="fundo">
@@ -40,8 +41,8 @@
             
             <h1 class="titulo">Ranking Final do 
                 Quiz!</h1>
-            <h2 class="titulo-2">Parabéns aos vencedores do Quiz!<br>
-                Ana ficou em primeiro com 90 pontos,<br>seguido por Carlos em segundo com 85 pontos,<br>e João em terceiro com 80 pontos.</h2>
+            <h2 class="titulo-2">Parabéns aos vencedores do Quiz!</h2>
+            <div id="confetti"></div>
         </section>
     </div>
 </body>
