API NÃO SEI MAIS POIS PERDI A CONTA

--- a/CONTEÚDOS/conteudo.html
+++ b/CONTEÚDOS/conteudo.html
@@ -27,9 +27,16 @@
                 </ul>
             </nav>
             <div class="menu-items" id="menu-items">
+                <button class="entrar2">
+                    <img class="entrar" src="../IMG/entrar.png" alt="">
+                </button>
+                <div id="info" style="display: none;">
+                    <p id="nomeUsuario">Olá, Visitante!</p>
+                    <button id="logout">Sair</button>
+                </div>
                 <button id="escuro" class="aceso-apagado">Light/Dark</button>
             </div>
-        </header>
+        </header>      
         
         <main>
             <section class="Natureza">
