--- a/CONTEÚDOS/sobrenos.html
+++ b/CONTEÚDOS/sobrenos.html
@@ -27,6 +27,7 @@
                 </ul>
             </nav>
             <div class="menu-items" id="menu-items">
+                <button class="entrar2"> <img class="entrar"  src="../IMG/entrar.png" alt=""></button>
                 <button id="escuro" class="aceso-apagado">Light/Dark</button>
             </div>
         </header>
