--- a/QUIZ/hanking.html
+++ b/QUIZ/hanking.html
@@ -39,9 +39,22 @@
                 <img src="../IMG/fundoquiz.png" class="fundo3" alt="">
             </div>
             
-            <h1 class="titulo">Ranking Final do 
-                Quiz!</h1>
+            <h1 class="titulo">Ranking Final do Quiz!</h1>
             <h2 class="titulo-2">Parabéns aos vencedores do Quiz!</h2>
+
+            <table border="1">
+                <thead>
+                  <tr>
+                    <th>Posição</th>
+                    <th>Nome</th>
+                    <th>Pontuação</th>
+                  </tr>
+                </thead>
+                <tbody id="ranking-table">
+                  
+                </tbody>
+              </table>
+
             <div id="confetti"></div>
         </section>
     </div>
