--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
                 <div class="menu-items" id="menu-items">
-                    <button id="escuro" class="aceso-apagado">Light/Dark</button>
+                    <button  id="escuro" class="aceso-apagado">Light/Dark</button>
                 </div>
         </header>
 
@@ -41,7 +41,7 @@
                     <h1 class="titulo">B i o l o g i a  & <br> Z o o l o g i a  T e r r e s t r e</h1>
                 </div>
                 <div class="botoes">
-                    <button class="botao" ">Começar</button>
+                    <button class="botao" onclick="navegarPara('../login/cadas.html')">Começar</button>
                 </div>
                 <div class="animais-sombra">
                     <img id="img-ani" class="animais" src="IMG/animais.png" alt="">
