--- a/QUIZ/quiz.html
+++ b/QUIZ/quiz.html
@@ -27,6 +27,11 @@
                 </ul>
             </nav>
             <div class="menu-items" id="menu-items">
+                <button class="entrar2"> <img class="entrar"  src="../IMG/entrar.png" alt=""></button>
+                <div id="info">
+                    <p>Olá, Visitante!</p>
+                    <button>Entrar</button>
+                </div>
                 <button id="escuro" class="aceso-apagado">Light/Dark</button>
             </div>
         </header>
