--- a/QUIZ/quiz2.html
+++ b/QUIZ/quiz2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="quiz2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
@@ -45,6 +45,7 @@
                     </ol>
                     <div class="botoes">
                         <a href="./tela1.html" class="botao-1">Começar</a>
+                        <a href="./tela1.html" class="botao-1">Entrar</a>
                     </div>
                 </div>
         </main>
