--- a/CONTEÚDOS/conteudo.html
+++ b/CONTEÚDOS/conteudo.html
@@ -32,7 +32,7 @@
                 </button>
                 <div id="info" style="display: none;">
                     <p id="nomeUsuario">Olá, Visitante!</p>
-                    <button id="logout">Sair</button>
+                    <button id="logoutButton">Sair</button>
                 </div>
                 <button id="escuro" class="aceso-apagado">Light/Dark</button>
             </div>
